manifests/gitpod/004_NetworkPolicy_ide-metrics.yaml
---
# networking.k8s.io/v1/NetworkPolicy ide-metrics
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  labels:
    app: gitpod
    component: ide-metrics
  name: ide-metrics
  namespace: gitpod
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              component: proxy
        - podSelector:
            matchLabels:
              component: ide-proxy
      ports:
        - port: 3000
          protocol: TCP
  podSelector:
    matchLabels:
      app: gitpod
      component: ide-metrics
  policyTypes:
    - Ingress
